test/loop/confidence/errors/ifthen_errors_1.loop
# Errors in pattern matching functions

func() ->
  if true return x

